--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Abiramy's Portfolio</title>
+    <title>Abi's Portfolio</title>
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet" />
     <link href="style.css" rel="stylesheet" />
     <link rel="icon" type="image/png" href="./images/tab-icon.png" />
@@ -182,4 +182,5 @@
     <script src="script.js"></script>
 
   </body>
+  
 </html>
