--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
       <section id="about" class="about-section section-2 section-mid py-20">
         <div class="container mx-auto px-4">
           <div class="flex flex-col md:flex-row items-center">
-            <img src="./images/profile-pic.png" class="w-full md:w-1/3 h-auto rounded-full shadow-lg" alt="Profile Picture" />
+            <img src="./images/profile-pic.png" class="w-full md:w-1/3 h-auto rounded-full" alt="Profile Picture" />
             <div class="m-8 md:mt-0 md:ml-8 px-6">
               <h2 class="text-3xl font-bold mb-4">About Me</h2>
               <p class="text-gray-400 leading-relaxed mb-8">
@@ -182,5 +182,5 @@
     <script src="script.js"></script>
 
   </body>
-  
+
 </html>
