--- a/index.html
+++ b/index.html
@@ -57,10 +57,7 @@
             <div class="m-8 md:mt-0 md:ml-8 px-12">
               <h2 class="text-3xl font-bold mb-4">About Me</h2>
               <p class="text-gray-400 leading-relaxed mb-8">
-                I'm Abiramy, 
-              </p>
-              <p class="text-gray-400 leading-relaxed mb-8">
-                As a passionate web developer, I bring extensive experience in React and .NET (C#), utilizing tools such as Visual Studio, VS Code, and Git to create efficient, scalable applications. My proficiency in cloud platforms like Azure and AWS enhances my ability to deliver comprehensive solutions that meet modern development standards. I'm committed to continuous learning and staying current with technological trends, always seeking to expand my skill set.
+                Hi! This is Abiramy. As a passionate web developer, I bring extensive experience in React and .NET (C#), utilizing tools such as Visual Studio, VS Code, and Git to create efficient, scalable applications. My proficiency in cloud platforms like Azure and AWS enhances my ability to deliver comprehensive solutions that meet modern development standards. I'm committed to continuous learning and staying current with technological trends, always seeking to expand my skill set.
               </p>
               <p class="text-gray-400 leading-relaxed mb-8">
                 I am currently delving into advanced frontend frameworks and exploring DevOps practices, including CI/CD pipelines, to build robust and resilient web applications. My passion for backend development drives me to further deepen my expertise in .NET and cloud solutions, ensuring that I can tackle complex challenges with innovative, future-ready approaches.
