Update about section

--- a/index.html
+++ b/index.html
@@ -66,10 +66,10 @@
                 Hi, I'm Brunthikka,
               </p>
               <p class="text-gray-200 leading-relaxed mb-8">
-                As a passionate Full Stack Developer, I bring extensive experience in React and .NET (C#), utilizing tools such as Visual Studio, VS Code, and Git to create efficient, scalable applications. My proficiency in cloud platforms like Azure and AWS enhances my ability to deliver comprehensive solutions that meet modern development standards. I'm committed to continuous learning and staying current with technological trends, always seeking to expand my skill set.
+                As a passionate Mobile Developer, I bring extensive experience in HTML & CSS, JavaScript, Flutter, and React Native, utilizing tools such as Android Studio and Figma to create user-friendly, cross-platform applications. My proficiency in backend technologies like Python and MySQL allows me to deliver complete, efficient solutions that cater to modern mobile development standards. I'm committed to continuous learning and staying current with evolving technologies, always striving to expand my skill set.  
               </p>
               <p class="text-gray-200 leading-relaxed mb-8">
-                I am currently delving into advanced frontend frameworks and exploring DevOps practices, including CI/CD pipelines, to build robust and resilient web applications. My passion for backend development drives me to further deepen my expertise in .NET and cloud solutions, ensuring that I can tackle complex challenges with innovative, future-ready approaches.
+                I am currently exploring advanced mobile frameworks and refining my design and development processes to create seamless, high-performance mobile experiences. My dedication to backend integration ensures that I can build robust and scalable applications, capable of tackling complex challenges with innovative, forward-thinking solutions.
               </p>
 
               <div class="mt-12">
