--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
           <h2 class="text-3xl font-bold mb-8">Contact Me</h2>
                         
           <p class="text-gray-200 leading-relaxed mb-8">
-            Let’s connect if you’re looking for someone who thrives on innovation and continuous learning in web and cloud development!
+            Let’s connect if you’re looking for someone who thrives on innovation and continuous learning in mobile development!
           </p>
           
           <!-- Email -->
