--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     <div class="sections-container">
 
       <!-- Home Section -->
-      <section id="home" class="home-section section-1 section-top text-white flex items-center justify-center">
+      <section id="home" class="home-section section section-1 section-top text-white flex items-center justify-center">
         <div class="text-center">
           <h1 class="text-6xl font-bold">
             Hello<span class="color-dot">.</span>
@@ -55,7 +55,7 @@
       </section>
   
       <!-- About Section -->
-      <section id="about" class="about-section section-2 section-mid py-20">
+      <section id="about" class="about-section section section-2 section-mid py-20">
         <div class="container mx-auto px-4">
           <div class="flex flex-col md:flex-row items-center">
             <img src="./images/profile-pic.jpeg" class="w-full md:w-1/3 h-auto rounded-full" alt="Profile Picture" />
@@ -81,7 +81,7 @@
       </section> 
   
       <!-- Skills Section -->
-      <section id="skills" class="skills-section section-3 section-mid py-20">
+      <section id="skills" class="skills-section section section-3 section-mid py-20">
         <div class="container mx-auto px-4 text-center">
           <h2 class="text-3xl font-bold mb-8">Skills</h2>
           <ul class="flex flex-wrap flex-col justify-center gap-4">
@@ -98,7 +98,7 @@
       </section>
   
       <!-- Projects Section -->
-      <section id="projects" class="projects-section section-4 section-mid py-20">
+      <section id="projects" class="projects-section section section-4 section-mid py-20">
         <div class="container mx-auto px-4">
           <!-- Professional Projects -->
           <h2 class="text-3xl font-bold text-center mb-12">Professional Projects</h2>
@@ -152,7 +152,7 @@
       </section>
   
       <!-- Contact Section -->
-      <section id="contact" class="contact-section section-5 section-bottom py-20">
+      <section id="contact" class="contact-section section section-5 section-bottom py-20">
         <div class="container mx-auto px-4 text-center">
           <h2 class="text-3xl font-bold mb-8">Contact Me</h2>
                         
